--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "coffee-inventory",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "homepage": "https://amandaguan-ag.github.io/coffee-inventory",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,11 +16,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --mode=development",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-"deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.0.0",
+    "webpack-cli": "^5.1.4"
   }
 }
