--- a/package.json
+++ b/package.json
@@ -4,23 +4,29 @@
   "homepage": "https://amandaguan-ag.github.io/coffee-inventory",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "w3-css": "^4.1.0",
-    "web-vitals": "^2.1.4"
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.21",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.3",
+        "react": "^18.2.0",
+        "w3-css": "^4.1.0"
+
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "webpack --mode=development",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0",
-    "webpack-cli": "^5.1.4"
+    "gh-pages": "^3.2.3"
   }
 }
